<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stone_bridge_formula" />

    <TextView
        android:id="@+id/tv_ratio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawablePadding="5dp"
        android:text="@string/brick_group_title1" />

    <Spinner
        android:id="@+id/sp_resistance_ratio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/brick_resistance_ratio"
        android:prompt="@string/sp_brick_prompt1"
        android:spinnerMode="dialog" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/brick_group_title2" />

    <Spinner
        android:id="@+id/sp_fill_ratio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/brick_fill_ratio"
        android:prompt="@string/sp_brick_prompt2"
        android:spinnerMode="dialog" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/truss_bridge_one_title3" />

        <EditText
            android:id="@+id/et_destroy_r"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_calc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/calc" />

    <TextView
        android:id="@+id/tv_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        android:text="@string/brick_note" />


</LinearLayout>
