<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wood_formula" />

    <TextView
        android:id="@+id/tv_ratio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/wood_label1" />

    <Spinner
        android:id="@+id/sp_resistance_ratio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/wood_resistance_ratio"
        android:prompt="@string/sp_wood_prompt1"
        android:spinnerMode="dialog" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wood_label2" />

        <EditText
            android:id="@+id/et_blast_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_note1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wooden_bridge_tip" />

    <Button
        android:id="@+id/btn_calc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/calc" />

</LinearLayout>
